Add JWT authentication support and improve integration tests